--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <!-- Permission pour accéder à Internet -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,10 @@
         android:theme="@style/Theme.Projet_Gerante_Domergue"
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
         <!-- Activité principale -->
         <activity
@@ -39,6 +45,8 @@
         <activity android:name=".activity.account.ModifyUserActivity"/>
         <activity android:name=".activity.account.DeleteUserActivity"/>
         <activity android:name=".activity.create_city.CreateCityActivity"/>
+        <activity android:name=".activity.create_event.CreateEventActivity"/>
+        <activity android:name=".activity.map.MapActivity"/>
 
     </application>
 
